# eutl_scraper

./: .gitignore  LICENSE.md  README.md  Untitled.ipynb  get_esd_data.bat  get_transactions.bat  main_augment_data.py  main_create_database.py  main_data_imputation.py  main_export_database.py  main_linking.py  main_transactions.py  pyproject.toml  requirements.txt
data/: .gitignore
data/additional/: .gitignore  installation_coordinates.csv  nace_all.csv  nace_leakage.csv  nace_scheme.csv
data/additional/leakage_list/: README.md  (+3 more)
documentation/: .gitignore  CleanMe.bat  Description_EUTL_database.tex
documentation/figures/: Picture_transfer.pptx  Pictures.pptx  Untitled.ipynb  mappings.xlsx  tables.xlsx  tables_old.xlsx  ~$Pictures.pptx
eutl_data_augmentation/: __init__.py  create_tables.py  get_coordinates.py  get_nace_classifications.py  get_orbis_identifiers.py  mappings.py
eutl_database/: DataAccessLayer.py  __init__.py  create_database.py  create_tables.py  esdModel.py  get_coordinates.py  link_foha_installations.py  mappings.py  model.py  restore_2021_information.py
eutl_database/database/: __init__.py  create_tables.py  get_coordinates.py  link_foha_installations.py
eutl_scraper/: __init__.py  items.py  linking.py  mappings.py  middlewares.py  own_settings.py  pipelines.py  scrapy.cfg  settings.py  transactions.py
eutl_scraper/items/: __init__.py  _utils.py  accountItems.py  esdItems.py  installationItems.py  transactionItems.py
eutl_scraper/spiders/: AccountSpider.py  EntitlementSpider.py  EsdSpider.py  EsdTransactionSpider.py  TransactionSpider.py
(+3 files in other folders)
