[tool.poetry]
name = "eutl-scraper"
version = "0.1.0"
description = ""
authors = ["Jan <abrell@posteo.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
pandas = "^2.2.1"
numpy = "^1.26.4"
openpyxl = "^3.1.2"
pyarrow = "^15.0.2"
requests = "^2.31.0"
googlemaps = "^4.10.0"
scrapy = "^2.11.1"
psycopg2-binary = "^2.9.9"
jupyter = "^1.0.0"
notebook = "^7.1.2"
lxml = "^5.2.0"
xlrd = "^2.0.1"
sqlalchemy = "^2.0.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
